Added Icons on menu

--- a/files/responsive.css
+++ b/files/responsive.css
@@ -62,6 +62,9 @@ Version      : 1.0
         text-align: center;
         margin-bottom: 30px;
     }
+    .about-me-left img {
+        width: 70%;
+    }
     .single-testimonial {
         padding: 0px 110px;
     }
